UI:window fixed resize window, UI:layout header align content middle

--- a/public/scss/parts/_ui-window.scss
+++ b/public/scss/parts/_ui-window.scss
@@ -1,20 +1,21 @@
 @charset "utf-8";
 .window-ctn{
-	display:none;position:fixed;z-index:50;top:0;left:0;width:100%;height:100%;text-align:center;
+	display:none;position:fixed;_position:absolute;z-index:50;top:0;left:0;width:100%;height:100%;text-align:center;
 	.window-mask{
 		position:absolute;top:0;left:0;z-index:51;height:100%;width:100%;
 		background:#565656;@include opacity(0.72);
 	}
-	.window-wrapper{position:relative;z-index:52;overflow:hidden;background:white;}
+	.window-wrapper{position:relative;margin-bottom:5%;z-index:52;overflow:hidden;background:white;}
 	.window-bar{background:#b6b6b6;padding:2px 0;text-align:right;}
-	.window-title{margin-left:5px;float:left;}
+	.window-title{margin-left:5px;float:left;line-height:2;}
 	.window-closer{
 		@extend %ib;margin-right:5px;padding:0;border:none;
 		font:bold 14px/normal 宋体;color:black;text-decoration:none;
 		transition:all 0.5s ease-out 0s;
 	}
 	.window-closer:hover{-webkit-transform:rotate(360deg);transform:rotate(360deg);border:none;}
-	.window-contents{overflow:auto;text-align:left;}
-	.window-header{line-height:2;min-height:28px;@include user-select(none);}
+	.window-contents{text-align:left;}
+	.window-view{overflow:auto;overflow-x:hidden;}
+	.window-header{height:28px;@include user-select(none);}
 	.window-footer{text-align:right;}
 }
